Fix landing page images and bg image on mobile

--- a/shared.css
+++ b/shared.css
@@ -98,6 +98,7 @@ body.show-mobile-nav {
 img {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
 /* reset buttons */
